--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -1,101 +1,86 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<!-- Top Logo -->
-<table height="164" width="100%" borderwidth="0" padding="0" cellpadding="0" cellspacing="0">
+<div class="site-header">
+  <img src="img/LethalAssassins.png" alt="Lethal Assassins">
+</div>
+
+<h1 class="roster-header">Roster</h1>
+<table class="roster" style="">
   <tr>
-    <td vAlign="center" align="center"><img src="img/LethalAssassins.png"></img><br><br><br><br></td>
+    {% if is_granted('ROLE_ADMIN') %}<th class="rostera">ID</th>{% endif %}
+    <th class="rostera">Rank</th>
+    <th class="rosterb">Name</th>
+    <th class="rosterc">Join Date</th>
+    <th class="rosterd">Discord ID</th>
   </tr>
+  <tr>
+    <th class="roster1" colspan="4"></th>
+  </tr>
+  {% for player in clanMaster %}
+    <tr>
+      {% if is_granted('ROLE_ADMIN') %}<td class="rostera">{{player.id}}</td>{% endif %}
+      <td class="rostera">Clan Master</td>
+      <td class="rosterb">{{player.name}}</td>
+      <td class="rosterc">{{player.joindate}}</td>
+      <td class="rosterd">{{player.discordid}}</td>
+    </tr>
+  {% endfor %}
+  <tr>
+    <th class="roster1" colspan="4"></th>
+  </tr>
+  {% for player in officers %}
+    <tr>
+      {% if is_granted('ROLE_ADMIN') %}<td class="rostera">{{player.id}}</td>{% endif %}
+      <td class="rostera">Officer</td>
+      <td class="rosterb">{{player.name}}</td>
+      <td class="rosterc">{{player.joindate}}</td>
+      <td class="rosterd">{{player.discordid}}</td>
+    </tr>
+  {% endfor %}
+  <tr>
+    <th class="roster1" colspan="4"></th>
+  </tr>
+  {% for player in fighters %}
+    <tr>
+      {% if is_granted('ROLE_ADMIN') %}<td class="rostera">{{player.id}}</td>{% endif %}
+      <td class="rostera">Fighter</td>
+      <td class="rosterb">{{player.name}}</td>
+      <td class="rosterc">{{player.joindate}}</td>
+      <td class="rosterd">{{player.discordid}}</td>
+    </tr>
+  {% endfor %}
+  <tr>
+    <th class="roster1" colspan="4"></th>
+  </tr>
+  {% for player in recruits %}
+    <tr>
+      {% if is_granted('ROLE_ADMIN') %}<td class="rostera">{{player.id}}</td>{% endif %}
+      <td class="rostera">Recruit</td>
+      <td class="rosterb">{{player.name}}</td>
+      <td class="rosterc">{{player.joindate}}</td>
+      <td>-</td>
+    </tr>
+  {% endfor %}
 </table>
+<div class="contact-roster">Contact our Master or one of our Officer's if you are interested in joining forces with Lethal Assassins, or you wish to set up a Clan War.</div>
 
-<!-- Roster List -->
-<div>- Roster -</div>
-<center>
-  <table class="rostertop" style="background: rgba(0,0,0,0.5)">
-    <tr>
-      <th class="rostera">Rank</th>
-      <th class="rosterb">Name</th>
-      <th class="rosterc">Join Date</th>
-      <th class="rosterd">Discord ID</th>
-    </tr>
-    <tr>
-      <th class="roster1" colspan="4"></th>
-    </tr>
-    {% for player in clanMaster %}
-      <tr>
-        <td class="rostera">Clan Master</td>
-        <td class="rosterb">{{player.name}}</td>
-        <td class="rosterc">{{player.joindate}}</td>
-        <td class="rosterd">{{player.discordid}}</td>
-      </tr>
-    {% endfor %}
-    <tr>
-      <th class="roster1" colspan="4"></th>
-    </tr>
-    {% for player in officers %}
-      <tr>
-        <td class="rostera">Recruit</td>
-        <td class="rosterb">{{player.name}}</td>
-        <td class="rosterc">{{player.joindate}}</td>
-        <td class="rosterd">{{player.discordid}}</td>
-      </tr>
-    {% endfor %}
-    <tr>
-      <th class="roster1" colspan="4"></th>
-    </tr>
-    {% for player in fighters %}
-      <tr>
-        <td class="rostera">Recruit</td>
-        <td class="rosterb">{{player.name}}</td>
-        <td class="rosterc">{{player.joindate}}</td>
-        <td class="rosterd">{{player.discordid}}</td>
-      </tr>
-    {% endfor %}
-    <tr>
-      <th class="roster1" colspan="4"></th>
-    </tr>
-    {% for player in recruits %}
-      <tr>
-        <td class="rostera">Recruit</td>
-        <td class="rosterb">{{player.name}}</td>
-        <td class="rosterc">{{player.joindate}}</td>
-      </tr>
-    {% endfor %}
-  </table>
-  <table class="rostercontact" style="background: rgba(0,0,0,0.5)">
-    <tr>
-      <th class="roster">
-        <div class="contact">Contact our Master or one of our Officer's if you are interested in joining forces with Lethal Assassins, or you wish to set up a Clan War.</div>
-      </th>
-    </tr>
-  </table>
-</center>
-<br><br><br>
-
-<!-- Screenshots -->
-<center>
-  <table id="maintable1" style="background: rgba(0,0,0,0.6)">
-    <tr>
-      <td>
-        <div>- Screenshots -</div>
-      </td>
-    </tr>
-  </table>
-</center>
-<br>
-<div class="component-screenshot">
+<h1 class="screenshots-header">Screenshots</h1>
+<div class="component-screenshot" id="component-screenshots">
   {% for screenshot in screenshots %}
-    <input type="radio" name="screenshots" id="screenshot-{{loop.index}}" hidden aria-hidden>
-    <div class="container">
+    <div class="container image-{{loop.index}}{{loop.index == 1 ? ' show' : ''}}">
       <img src="{{screenshot}}"/>
     </div>
   {% endfor %}
   <div class="select-buttons">
     {% for screenshot in screenshots %}
       <span>
-        <label for="screenshot-{{loop.index}}">●</label>
+        <button name="image-{{loop.index}}">●</button>
       </span>
     {% endfor %}
   </div>
 </div>
+<script type="text/javascript">
+  var screenshotBox
+</script>
 {% endblock body %}
