--- a/app/Resources/views/esl/games-list.html.twig
+++ b/app/Resources/views/esl/games-list.html.twig
@@ -4,12 +4,6 @@
 <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.1/build/pure-min.css" integrity="sha384-CCTZv2q9I9m3UOxRLaJneXrrqKwUNOzZ6NGEUMwHtShDJ+nCoiXJCAgi05KfkLGY" crossorigin="anonymous">
 <link rel="stylesheet" href="{{asset('styles/base.css')}}?v={{cacheBust}}">
 <style media="screen">
-  .games-list {
-    margin: auto;
-    max-width: 50rem;
-    padding: 1rem;
-    background-color: rgba(255, 255, 255, .8);
-  }
   .games-list table {
     min-width: 100%;
   }
@@ -19,7 +13,7 @@
 </style>
 {% endblock %}
 {% block body %}
-<div class="games-list">
+<div class="games-list admin-panel">
   <h1>ESL Games</h1>
   {% if is_granted('ROLE_ADMIN') %}
     <div class="add-game">
