--- a/app/Resources/views/player/show-player.html.twig
+++ b/app/Resources/views/player/show-player.html.twig
@@ -21,7 +21,7 @@
 {% endblock %}
 {% block body %}
 <div class="admin-panel">
-  <h1>Player</h1>
+  <h1><a href="{{path('admin-show-players')}}">Player List</a> / {{player.name}}</h1>
   <ul class="player-info">
     <li><span class="field-label">Rank:</span>       <span class="field-value">{{player.rank}}</span></li>
     <li><span class="field-label">Name:</span>       <span class="field-value">{{player.name}}</span></li>
