Added discordId back to Recruits.
Signed-off-by: bluesaberist <bluesaberist@gmail.com>

--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -21,7 +21,7 @@
       <td class="rostera">Clan Master</td>
       <td class="rosterb">{{player.name}}</td>
       <td class="rosterc">{{player.joindate}}</td>
-      <td class="rosterd">{{player.discordid}}</td>
+      <td class="rosterd">{{player.discordId}}</td>
     </tr>
   {% endfor %}
   <tr>
@@ -32,7 +32,7 @@
       <td class="rostera">Officer</td>
       <td class="rosterb">{{player.name}}</td>
       <td class="rosterc">{{player.joindate}}</td>
-      <td class="rosterd">{{player.discordid}}</td>
+      <td class="rosterd">{{player.discordId}}</td>
     </tr>
   {% endfor %}
   <tr>
@@ -43,7 +43,7 @@
       <td class="rostera">Fighter</td>
       <td class="rosterb">{{player.name}}</td>
       <td class="rosterc">{{player.joindate}}</td>
-      <td class="rosterd">{{player.discordid}}</td>
+      <td class="rosterd">{{player.discordId}}</td>
     </tr>
   {% endfor %}
   <tr>
@@ -54,6 +54,7 @@
       <td class="rostera">Recruit</td>
       <td class="rosterb">{{player.name}}</td>
       <td class="rosterc">{{player.joindate}}</td>
+      <td class="rosterd">{{player.discordId}}</td>
       <td>-</td>
     </tr>
   {% endfor %}
