--- a/app/Resources/views/esl/games-list.html.twig
+++ b/app/Resources/views/esl/games-list.html.twig
@@ -14,6 +14,7 @@
 {% endblock %}
 {% block body %}
 <div class="games-list admin-panel">
+  {% include 'admin/navigation.html.twig' %}
   <h1>ESL Games</h1>
   {% if is_granted('ROLE_ADMIN') %}
     <div class="add-game">
